--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ http {
 
   # Define the server block for the Angular application
   server {
-    listen {{ $PORT }};
+    listen $PORT;
     server_name _;
     root /app/dist/quote-web;
 
@@ -33,4 +33,3 @@ http {
     }
   }
 }
-
