--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "^15.2.2",
     "@angular/platform-browser-dynamic": "^15.2.2",
     "@angular/router": "^15.2.2",
-    "bootstrap": "^5.3.0-alpha1",
+    "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.3",
     "ng-bootstrap": "^1.6.3",
     "rxjs": "~7.8.0",
