--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.3",
     "ng-bootstrap": "^1.6.3",
+    "ngx-mask": "^15.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
