--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
     index index.html;
 
     location / {
-      try_files $uri $uri/ /index.html;
+      try_files $uri $uri/ /index.html =404;
     }
   }
 }
