--- a/nginx.conf
+++ b/nginx.conf
@@ -1,36 +1,12 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+# Define the server block for the Angular application
+server {
+  listen 80;
 
-events {
-  worker_connections 768;
-}
+  server_name _;
 
-http {
-  sendfile on;
-  tcp_nopush on;
-  tcp_nodelay on;
-  keepalive_timeout 65;
-  types_hash_max_size 2048;
-  client_max_body_size 10m;
-
-  # Set the MIME type for JSON files
-  types {
-    application/json  json;
-  }
-
-  # Define the server block for the Angular application
-  server {
-    listen 80;
-    server_name _;
-    root /app/dist/quote-web;
-
+  location / {
+    root /usr/share/nginx/html;
     index index.html;
-
-    location / {
-      try_files $uri $uri/ /index.html =404;
-      index  index.html index.htm;
-    }
+    try_files $uri $uri/ /index.html =404;
   }
 }
