--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
+    "@npmcli/package-json": "^5.2.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.3",
     "ngx-mask": "^15.2.1",
@@ -26,8 +27,8 @@
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.14",
-    "@angular/cli": "^16.2.14",
+    "@angular-devkit/build-angular": "^17.3.8",
+    "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.12",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
